# cleros

./: .gitignore  CHANGELOG.md  README.md  asset-manifest.json  index.html  local_context.py  manifest.json  package.json  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml
.github/workflows/: deploy.yml
data/: README.md  analyzed_sentences.jsonl  greek_hymn_corpus.json  hymns.json  span_embeddings_artifact.json  span_embeddings_beast.json  span_embeddings_celestial_sphere.json  span_embeddings_hero.json  span_embeddings_mortal.json  span_embeddings_nature.json  span_embeddings_other_divinity.json  span_embeddings_place.json  span_metadata_artifact.json  span_metadata_deity.json  span_metadata_epithet.json  span_metadata_hero.json  span_metadata_mortal.json  span_metadata_other_divinity.json  span_metadata_place.json
data/base/: hymn_0.json  hymn_12.json  hymn_15.json  hymn_16.json  hymn_18.json  hymn_19.json  hymn_2.json  (+57 more)
docs/: DEPLOYMENT.md  PAYMENT_SETUP.md  PRODUCTION_CHECKLIST.md  README.md
examples/: classification_results.json  deity_classification_example.py
scripts/: README.md  generate-use-embeddings.js  generate_additional_span_embeddings.py  generate_embeddings.ts  generate_tfjs_embeddings.py  package.json
tools/: README.md  __init__.py  check_categories.py  check_numbers.py  clean_classifications.py  entity_classifier.py  normalize_categories.py  sentence_classifier.py  visualize_classifications.py
web/: CHANGELOG.md  README.md  bundle-analysis.html  nginx.conf  package.json  redirect.html  tsconfig.json  tsconfig.test.json
(+152 files in other folders)
