[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleros"
version = "0.1.0"
authors = [
  { name="J Neumann" },
]
description = "Semantic analysis of Orphic Hymns"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "python-dotenv",
    "spacy>=3.7.0", 
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "wordcloud>=1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 